--- a/keycloak-namespace.yaml
+++ b/keycloak-namespace.yaml
@@ -2,9 +2,9 @@
   "apiVersion": "v1",
   "kind": "Namespace",
   "metadata": {
-    "name": "keycloak",
+    "name": "poc",
     "labels": {
-      "name": "keycloak"
+      "name": "poc"
     }
   }
 }
